// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBadge count 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    class="pf-v6-c-button pf-m-stateful pf-m-read"
    data-ouia-component-id="OUIA-Generated-Button-stateful-:r2:"
    data-ouia-component-type="PF6/Button"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-button__icon pf-m-start"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M28.75 22v3.5c0 .689-.561 1.25-1.25 1.25h-7.521c.005.084.021.166.021.25 0 2.206-1.794 4-4 4s-4-1.794-4-4c0-.084.016-.166.021-.25H4.5c-.689 0-1.25-.561-1.25-1.25V22a.75.75 0 0 1 .75-.75c1.24 0 2.25-1.009 2.25-2.25v-4c0-4.826 3.528-8.833 8.138-9.605A2.482 2.482 0 0 1 13.5 3.5C13.5 2.122 14.621 1 16 1s2.5 1.122 2.5 2.5c0 .761-.349 1.436-.888 1.895 4.61.772 8.138 4.779 8.138 9.605v4c0 1.241 1.01 2.25 2.25 2.25a.75.75 0 0 1 .75.75Z"
        />
      </svg>
    </span>
    <span
      class="pf-v6-c-button__text"
    >
      3
    </span>
  </button>
</DocumentFragment>
`;

exports[`false NotificationBadge needs attention 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    class="pf-v6-c-button pf-m-stateful pf-m-attention"
    data-ouia-component-id="OUIA-Generated-Button-stateful-:r1:"
    data-ouia-component-type="PF6/Button"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-button__icon pf-m-start"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M28 21c-1.103 0-2-.897-2-2v-4c0-4.884-3.523-8.955-8.159-9.823.405-.444.659-1.03.659-1.677C18.5 2.121 17.379 1 16 1s-2.5 1.121-2.5 2.5c0 .648.254 1.233.659 1.677C9.523 6.045 6 10.116 6 15v4c0 1.103-.897 2-2 2a1 1 0 0 0-1 1v3.5c0 .827.673 1.5 1.5 1.5H12c0 2.206 1.794 4 4 4s4-1.794 4-4h7.5c.827 0 1.5-.673 1.5-1.5V22a1 1 0 0 0-1-1ZM14.5 11a1.5 1.5 0 0 1 3 0v5a1.5 1.5 0 0 1-3 0v-5ZM16 24.014a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 24.014Z"
        />
      </svg>
    </span>
    <span
      class="pf-v6-c-button__text"
    >
      does not need attention Badge
    </span>
  </button>
</DocumentFragment>
`;

exports[`true NotificationBadge needs attention 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    class="pf-v6-c-button pf-m-stateful pf-m-attention"
    data-ouia-component-id="OUIA-Generated-Button-stateful-:r0:"
    data-ouia-component-type="PF6/Button"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-button__icon pf-m-start"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M28 21c-1.103 0-2-.897-2-2v-4c0-4.884-3.523-8.955-8.159-9.823.405-.444.659-1.03.659-1.677C18.5 2.121 17.379 1 16 1s-2.5 1.121-2.5 2.5c0 .648.254 1.233.659 1.677C9.523 6.045 6 10.116 6 15v4c0 1.103-.897 2-2 2a1 1 0 0 0-1 1v3.5c0 .827.673 1.5 1.5 1.5H12c0 2.206 1.794 4 4 4s4-1.794 4-4h7.5c.827 0 1.5-.673 1.5-1.5V22a1 1 0 0 0-1-1ZM14.5 11a1.5 1.5 0 0 1 3 0v5a1.5 1.5 0 0 1-3 0v-5ZM16 24.014a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 24.014Z"
        />
      </svg>
    </span>
    <span
      class="pf-v6-c-button__text"
    >
      needs attention Badge
    </span>
  </button>
</DocumentFragment>
`;
